force-app/main/core/objects/Log__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <inlineHelpText>Size in Bytes</inlineHelpText>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>